# KeyDetection

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  LICENSE  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: key_detection.h
include/key-detector/: key_detection.h
source/: main.cpp
source/key-detector/: key_detection.cc
src/: key_detection.cc  main.cc
test/: CMakeLists.txt
test/source/: KeyDetection_test.cpp
